--- a/test/edit.html
+++ b/test/edit.html
@@ -18,17 +18,6 @@
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
 		<script src="../lib/jquery.min.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
-		<script src="../src/config.js"></script>
-		<script src="../src/event.js"></script>
-		<script src="../src/html.js"></script>
-		<script src="../src/selector.js"></script>
-		<script src="../src/node.js"></script>
-		<script src="../src/range.js"></script>
-		<script src="../src/cmd.js"></script>
-		<script src="../src/widget.js"></script>
-		<script src="../src/edit.js"></script>
 	</head>
 	<body>
 		<h1>KindEditor Edit Test</h1>
@@ -56,6 +45,6 @@
 		<input type="button" id="design" value="Design Mode" />
 		<input type="button" id="source" value="Source Mode" />
 		<input type="button" id="toggle" value="Toggle Mode" />
-		<script src="edit.js"></script>
+		<script type="module" src="edit.js"></script>
 	</body>
 </html>
