--- a/test/node.html
+++ b/test/node.html
@@ -8,15 +8,6 @@
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
 		<script src="../lib/jquery.min.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
-		<script src="../src/config.js"></script>
-		<script src="../src/event.js"></script>
-		<script src="../src/html.js"></script>
-		<script src="../src/selector.js"></script>
-		<script src="../src/node.js"></script>
-		<script src="../src/cmd.js"></script>
-		<script src="../src/main.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">KindEditor Unittest</h1>
@@ -56,7 +47,7 @@ g			<embed/> </div>
 		</div>
 		<!-- include test files -->
 
-		<script src="node.js"></script>
+		<script type="module" src="node.js"></script>
 
 	</body>
 </html>
