--- a/test/range.html
+++ b/test/range.html
@@ -6,14 +6,6 @@
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
-		<script src="../src/config.js"></script>
-		<script src="../src/event.js"></script>
-		<script src="../src/html.js"></script>
-		<script src="../src/selector.js"></script>
-		<script src="../src/node.js"></script>
-		<script src="../src/range.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">KindEditor Unittest</h1>
@@ -47,6 +39,6 @@ g			<embed/> </div>
 			<div> </div>
 		</div>
 		<!-- include test files -->
-		<script src="range.js"></script>
+		<script type="module" src="range.js"></script>
 	</body>
 </html>
