--- a/test/core.html
+++ b/test/core.html
@@ -6,14 +6,12 @@
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">KindEditor Unittest</h1>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 		<!-- include test files -->
-		<script src="core.js"></script>
+		<script type="module" src="core.js"></script>
 	</body>
 </html>
