--- a/test/event.html
+++ b/test/event.html
@@ -16,13 +16,6 @@
 		</style>
 		<script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script>
 		<script src="../lib/qunit/qunit.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
-		<script src="../src/config.js"></script>
-		<script src="../src/event.js"></script>
-		<script src="../src/html.js"></script>
-		<script src="../src/selector.js"></script>
-		<script src="../src/node.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">KindEditor Event Test</h1>
@@ -56,6 +49,6 @@
 			<textarea id="innerDiv" style="display:block;margin:10px;padding:10px;width:80%;height:100px;border:1px solid #000;"></textarea>
 		</div>
 		<div id="test-data-01" style="display:none;"></div>
-		<script src="event.js"></script>
+		<script type="module" src="event.js"></script>
 	</body>
 </html>
