--- a/test/html.html
+++ b/test/html.html
@@ -6,12 +6,6 @@
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
-		<script src="../src/config.js"></script>
-		<script src="../src/html.js"></script>
-		<script src="../src/event.js"></script>
-		<script src="../src/selector.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">KindEditor Unittest</h1>
@@ -43,6 +37,6 @@
 		</div>
 
 		<!-- include test files -->
-		<script src="html.js"></script>
+		<script type="module" src="html.js"></script>
 	</body>
 </html>
