--- a/test/selector.html
+++ b/test/selector.html
@@ -7,12 +7,6 @@
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
 		<script src="../lib/jquery.min.js"></script>
-		<!-- include src files -->
-		<script src="../src/core.js"></script>
-		<script src="../src/config.js"></script>
-		<script src="../src/event.js"></script>
-		<script src="../src/html.js"></script>
-		<script src="../src/selector.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">KindEditor Unittest</h1>
@@ -51,6 +45,6 @@ g			<embed/> </div>
 			<div> </div>
 		</div>
 		<!-- include test files -->
-		<script src="selector.js"></script>
+		<script type="module" src="selector.js"></script>
 	</body>
 </html>
